# communicate_hc

./: CMakeLists.txt  README.md  main_client.cpp  main_host.cpp  makefile
communicate/: client.cpp  client.hpp  host.cpp  host.hpp  safe_queue.hpp
communicate/message/: message.cpp  message.hpp
